# stellar-forge

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.yaml  kale_tracker.py  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py  models.py
backend/app/models/: farming.py  price.py
backend/app/services/: contract_integration.py  kale_farming.py  kale_tracker.py  price_fetcher.py  price_monitor.py  tracker_service.py
backend/scripts/: deploy.sh  local-dev.sh  setup-secrets.sh
contracts/: build.sh  deploy.sh
contracts/kale-farming-analytics/: Cargo.toml
contracts/kale-farming-analytics/src/: lib.rs  main.rs  test.rs
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/calculator/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/farming/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/my-farm/: page.tsx
frontend/app/network/: page.tsx
frontend/app/price/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: splash-screen.tsx
frontend/components/layout/: dashboard-layout.tsx  header.tsx  sidebar.tsx
frontend/components/price/: price-chart.tsx  price-metrics.tsx  price-timeframe-selector.tsx
frontend/components/ui/: card.tsx  freighter-install.tsx  logo.tsx  wallet-connect.tsx
(+4 files in other folders)
