[package]
name = "kale-farming-analytics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "kale-farming-analytics"
path = "src/main.rs"